# MAC-Telnet

./: .clang-format  .editorconfig  .pre-commit-config.yaml  Dockerfile  README.markdown  meson.build  meson_options.txt
.github/workflows/: ci.yml
config/: meson.build
doc/: meson.build
po/: meson.build
src/: interfaces.c  meson.build
